--- a/program/index.html
+++ b/program/index.html
@@ -284,10 +284,12 @@
                                 </div>
                             </div>
                             <div class="image">
-                                <img src="../assets/partners/RGB-LogoV4.png" alt="">
+                                <img src="../assets/partners/2021/zirve/selami ciftci.jpeg" alt="">
                             </div>
                             <div class="text">
-                                <h3 class="item-title">Konuşma</h3>
+                                <h3 class="item-title">Veri Mühendisliği: Telekom Sektöründe Büyük Verilerin Makine Öğrenmesi Teknikleri ile Anlamlandırılması</h3>
+                                <hr/>
+                                <h4>Selami Çiftçi - AR-GE Operasyonları Müdürü</h4>
                             </div>
                         </div>
                         <div class="program-item">
@@ -318,6 +320,27 @@
                                 </div>
                                 <hr>
                                 <div>
+                                    14<br>
+                                    50
+                                </div>
+                            </div>
+                            <div class="image">
+                                <img src="../assets/partners/RGB-LogoV4.png" alt="">
+                            </div>
+                            <div class="text">
+                                <h3 class="item-title"></h3>
+                                <h3>Panel</h3>
+                                
+                            </div>
+                        </div>
+                        <div class="program-item">
+                            <div class="time">
+                                <div>
+                                    14<br>
+                                    50
+                                </div>
+                                <hr>
+                                <div>
                                     15<br>
                                     20
                                 </div>
@@ -327,7 +350,9 @@
                             </div>
                             <div class="text">
                                 <h3 class="item-title"></h3>
-                                <h3>Panel</h3>
+                                <h3>Q & A</h3>
+                                <hr/>
+                                <h4>Koray Kocabaş</h4>
                                 
                             </div>
                         </div>
@@ -768,7 +793,7 @@
                                     <img src="../assets/partners/2021/zirve/ahmet yuksel.jfif" alt="">
                                 </div>
                                 <div class="text">
-                                    <h3 class="item-title">Workshop</h3>
+                                    <h3 class="item-title">Müşteri Segmentasyonu ve Duygu Analizi</h3>
                                     <hr/>
                                     <h4>Atılberk Çelebi - Senior Machine Learning Engineer, Dogma Alares</h4>
                                     <h4>Çisem Altan - Machine Learning Engineer, Dogma Alares</h4>
