--- a/program/index.html
+++ b/program/index.html
@@ -697,7 +697,7 @@
                                 <h3>Networking Molası</h3>
                             </div>
                         </div>
-                        <div class="program-item">
+                        <div class="program-item display:none">
                             <div class="time">
                                 <div>
                                     16<br>
@@ -718,7 +718,7 @@
                                 <h4></h4>
                             </div>
                         </div>
-                        <div class="program-item">
+                        <div class="program-item display:none">
                             <div class="time">
                                 <div>
                                     16<br>
