--- a/program/index.html
+++ b/program/index.html
@@ -176,12 +176,12 @@
                                 </div>
                             </div>
                             <div class="image">
-                                <img src="../assets/partners/2021/zirve/aren haddeler.jfif" alt="">
+                                <img src="../assets/partners/2021/zirve/alper.png" alt="">
                             </div>
                             <div class="text">
-                                <h3 class="item-title">Sigortacılıkta Yapay Zeka Odaklı Başarının 4 Adımı</h3>
+                                <h3 class="item-title">IoT ve LoRaWAN</h3>
                                 <hr/>
-                                <h4>Aren Haddeler - Co-Founder & CAO, Lumnion </h4>                                
+                                <h4>Alper Yeğin - VP of Advanced Technology Development, Actility </h4>                                
                             </div>
                         </div>
                         <div class="program-item">
@@ -301,7 +301,7 @@
                                 <hr>
                                 <div>
                                     14<br>
-                                    30
+                                    25
                                 </div>
                             </div>
                             <div class="image">
@@ -316,20 +316,22 @@
                             <div class="time">
                                 <div>
                                     14<br>
-                                    30
+                                    25
                                 </div>
                                 <hr>
                                 <div>
                                     14<br>
-                                    50
+                                    45
                                 </div>
                             </div>
                             <div class="image">
-                                <img src="../assets/partners/RGB-LogoV4.png" alt="">
+                                <img src="../assets/partners/2021/zirve/aren haddeler.jfif" alt="">
                             </div>
                             <div class="text">
                                 <h3 class="item-title"></h3>
-                                <h3>Panel</h3>
+                                <h3>Sigortacılıkta Yapay Zeka Odaklı Başarının 4 Adımı</h3>
+                                <hr/>
+                                <h4>Aren Haddeler - Co-Founder & CAO, Lumnion</h4>
                                 
                             </div>
                         </div>
@@ -346,13 +348,13 @@
                                 </div>
                             </div>
                             <div class="image">
-                                <img src="../assets/partners/RGB-LogoV4.png" alt="">
+                                <img src="../assets/partners/2021/zirve/koray kocabas.jpg" alt="">
                             </div>
                             <div class="text">
                                 <h3 class="item-title"></h3>
                                 <h3>Q & A</h3>
                                 <hr/>
-                                <h4>Koray Kocabaş</h4>
+                                <h4>Koray Kocabaş - Director of Big Data Analytics, Demirören Teknoloji</h4>
                                 
                             </div>
                         </div>
@@ -502,12 +504,12 @@
                                 </div>
                             </div>
                             <div class="image">
-                                <img src="../assets/partners/RGB-LogoV4.png" alt="">
+                                <img src="../assets/partners/2021/zirve/akif gunes.jpg" alt="">
                             </div>
                             <div class="text">
-                                <h3 class="item-title">Konuşma</h3>
+                                <h3 class="item-title">Tazi Startup Serüveni</h3>
                                 <hr/>
-                                <h4></h4>
+                                <h4>Akif Güneş - AI Solutions Director, Tazi.ai</h4>
                             </div>
                         </div>
                         <div class="program-item">
@@ -569,7 +571,7 @@
                             <div class="text">
                                 <h3 class="item-title"><b>Breaking Out Of Notebooks:</b> Unguarded Cells of Data Science</h3>
                                 <hr/>
-                                <h4>Global Maksimum</h4>
+                                <h4>Dorukhan Afacan - Data Scientist, Global Maksimum</h4>
                             </div>
                         </div>
                         <div class="program-item">
@@ -648,14 +650,19 @@
                                 </div>
                             </div>
                             <div class="image">
-                                <img src="../assets/partners/RGB-LogoV4.png" alt="">
+                                <img src="../assets/partners/2021/zirve/mert cobanaov.jpeg" alt="">
+                                <img src="../assets/partners/2021/zirve/samet ozturk.jpeg" alt="">
+                                <img src="../assets/partners/2021/zirve/murat can kurtulus.jfif" alt="">
                             </div>
                             <div class="text">
-                                <h3 class="item-title">Panel</h3>
+                                <h3 class="item-title">Veri Bilimi & MLOps Dünyası</h3>
                                 <hr/>
-                                <h4>Global AI Hub</h4>
+                                <h4>Mert Çobanov - AI Team Lead, Global AI Hub</h4>
+                                <h4>Samet Öztürk - MLOps Engineer, tazi.ai</h4>
+                                <h4>Murat Can Kurtuluş - Geliştirme Mühendisi, Bosch</h4>
                             </div>
                         </div>
+                        <!--
                         <div class="program-item">
                             <div class="time">
                                 <div>
@@ -737,6 +744,7 @@
                                 <h3 class="item-title">Konuşma</h3>
                             </div>
                         </div>
+                    -->
                     </div>
                 </div>
             </div>
@@ -917,6 +925,48 @@
                                     <h4>Onat Yapıcı - Apprentice Data Scientist, Global Maksimum</h4>
                                 </div>
                             </div>
+                            <div class="program-item">
+                                <div class="time">
+                                    <div>
+                                        19<br>
+                                        00
+                                    </div>
+                                    <hr>
+                                    <div>
+                                        21<br>
+                                        00
+                                    </div>
+                                </div>
+                                <div class="image">
+                                    <img src="../assets/partners/2021/workshop/tazi.ff11d848-c418-401e-a30f-a8de8938a793" alt="">
+                                </div>
+                                <div class="text">
+                                    <h3 class="item-title">Seeing the Future of Machine Learning Applications through AutoML</h3>
+                                    <hr/>
+                                    <h4>TAZI AI Systems</h4>
+                                </div>
+                            </div>
+                            <div class="program-item">
+                                <div class="time">
+                                    <div>
+                                        19<br>
+                                        00
+                                    </div>
+                                    <hr>
+                                    <div>
+                                        20<br>
+                                        30
+                                    </div>
+                                </div>
+                                <div class="image">
+                                    <img src="../assets/partners/2021/zirve/mert kutay.jfif" alt="">
+                                </div>
+                                <div class="text">
+                                    <h3 class="item-title">Oyun Verilerinin Pandas ile İşlenmesi</h3>
+                                    <hr/>
+                                    <h4>Mert Kutay - Backend/AI Team Lead, Senpai.gg</h4>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <br/><br/>
@@ -990,12 +1040,12 @@
                             <div class="program-item">
                                 <div class="time">
                                     <div>
-                                        20<br>
+                                        19<br>
                                         00
                                     </div>
                                     <hr>
                                     <div>
-                                        23<br>
+                                        21<br>
                                         00
                                     </div>
                                 </div>
