--- a/program/index.html
+++ b/program/index.html
@@ -566,7 +566,7 @@
                                 </div>
                             </div>
                             <div class="image">
-                                <img src="../assets/partners/2021/destekçilerimiz/global_maksimum2.jfif" alt="">
+                                <img src="../assets/partners/2021/zirve/dorukhan afacan.jfif" alt="">
                             </div>
                             <div class="text">
                                 <h3 class="item-title"><b>Breaking Out Of Notebooks:</b> Unguarded Cells of Data Science</h3>
