--- a/sponsorlar/index.html
+++ b/sponsorlar/index.html
@@ -382,6 +382,13 @@
                                 </a>
                             </div>
                         </div>
+                        <div class="col-lg-4 mx-auto">
+                            <div class="sponsor">
+                                <a target="_blank" href="https://www.ieeeankarabilim.org/">
+                                    <img style="width: 100%;" src="/assets/partners/2021/kulupler/kulup10.png" alt="">
+                                </a>
+                            </div>
+                        </div>
                     </div>
                     <!--
                         <div class="col-lg-4">
