--- a/program/index.html
+++ b/program/index.html
@@ -289,7 +289,7 @@
                             <div class="text">
                                 <h3 class="item-title">Veri Mühendisliği: Telekom Sektöründe Büyük Verilerin Makine Öğrenmesi Teknikleri ile Anlamlandırılması</h3>
                                 <hr/>
-                                <h4>Selami Çiftçi - AR-GE Operasyonları Müdürü</h4>
+                                <h4>Selami Çiftçi - AR-GE Operasyonları Müdürü, Türk Telekom</h4>
                             </div>
                         </div>
                         <div class="program-item">
