team ve buton rengi
datacamp organizasyon ekibi ve iletişim bilgileri günclellendi. butonların rengi navbar ile aynı yapıldı

--- a/index.html
+++ b/index.html
@@ -159,10 +159,19 @@
                 <p>Boğaziçi DataCamp'te;</p>
                 <ul class="why-list">
                     <li>
-                        Kendinizi teknik anlamda geliştirebileceğiniz, alanında uzman şirketler tarafından düzenlenen çeşitli seviyede workshoplar,
+                        Alanında uzman isimlerden ve ilgili şirketlerden başlangıç - ileri düzey arası workshoplar,
                     </li>
                     <li>
-                        İki gün sürecek olan ve Veri Bilimi'nin çeşitli alanlarını tanıyabileceğiniz zirve,
+                        İlgili şirketlerin Güney Meydan'da katılımcılarla buluşabileceği stantlar,
+                    </li>            
+                    <li>
+                        Alanında uzman isimler ile "Ask Me Anything" oturumları,
+                    </li>
+                    <li>
+                        Katılımcıları veri bilimi alanında geliştirecek problemlerin bulunduğu datathonlar,
+                    </li>
+                    <li>
+                        İki gün sürecek olan; konuşmalar, paneller ve soru cevap oturumları ile dolu olan veri bilimi zirvesi!
                     </li>
                     <!-- <li>
                         4 Gün sürecek olan etkinliğin ardından ilgi çeken konuları daha detaylı bir şekilde inceleyen düzenli webinarlar olacaktır.
@@ -264,45 +273,45 @@
             <div class="team-container clearfix text-break">
                 <div class="team-member">
                     <div class="image">
-                        <img src="assets/team/burkay.jpg" alt="Ahmet Burkay Kınık">
+                        <img src="assets/team/ahmetcelal.jpg" alt="Ahmet Celal Gündoğdu">
                     </div>
                     <div class="text">
-                        <strong>Ahmet Burkay Kınık</strong> <br>
+                        <strong>Ahmet Celal Gündoğdu</strong> <br>
                         <em>DataCamp Proje Direktörü</em> <br>
-                        <a class="mailFont" href="mailto:burkay.kinik@compec.org" target="_top">burkay.kinik@compec.org</a> <br>
+                        <a class="mailFont" href="mailto:celal.gundogdu@compec.org" target="_top">celal.gundogdu@compec.org</a> <br>
                    <!-- Ekip iletişim bilgileri    <a href="tel:+905364433684" target="_top">+90 536 443 36 84</a>-->  
                     </div>
                 </div>
                 <div class="team-member">
                     <div class="image">
-                        <img src="assets/team/ahmetcelal.JPG" alt="Ahmet Celal Gündoğdu">
+                        <img src="assets/team/asaf.JPG" alt="Asaf Kanlıpıçak">
                     </div>
                     <div class="text">
-                        <strong>Ahmet Celal Gündoğdu</strong> <br>
+                        <strong>Asaf Kanlıpıçak</strong> <br>
                         <em>DataCamp Proje Lideri</em> <br>
-                        <a class="mailFont" href="mailto:ahmetcelal.gundogdu@leader.compec.org" target="_top">ahmetcelal.gundogdu@leader.compec.org</a> <br>
+                        <a class="mailFont" href="mailto:asaf.kanlipicak@leader.compec.org" target="_top">asaf.kanlipicak@leader.compec.org</a> <br>
                      <!--    <a href="tel:+905071913564" target="_top">+90 507 191 35 64</a>-->  
                     </div>
                 </div>
                 <div class="team-member">
                     <div class="image">
-                        <img src="assets/team/semih.jpg" alt="Recep Semih Kanber">
+                        <img src="assets/team/ali.jpg" alt="Ali Sönmez">
                     </div>
                     <div class="text">
-                        <strong>Recep Semih Kanber</strong> <br>
+                        <strong>Ali Sönmez</strong> <br>
                         <em>DataCamp Proje Lideri</em> <br>
-                        <a class="mailFont" href="mailto:recepsemih.kanber@leader.compec.org" target="_top">recepsemih.kanber@leader.compec.org</a> <br>
+                        <a class="mailFont" href="mailto:ali.sonmez@leader.compec.org" target="_top">ali.sonmez@leader.compec.org</a> <br>
                     <!--     <a href="tel:+905316560971" target="_top">+90 531 656 09 71</a>-->  
                     </div>
                 </div>
                 <div class="team-member">
                     <div class="image">
-                        <img src="assets/team/fatmanur.JPG" alt="Fatmanur Yaman">
+                        <img src="assets/team/kaan.JPG" alt="Kaan Aydın">
                     </div>
                     <div class="text">
-                        <strong>Fatmanur Yaman</strong> <br>
+                        <strong>Kaan Aydın</strong> <br>
                         <em>DataCamp Proje Lideri</em> <br>
-                        <a class="mailFont" href="mailto:fatmanur.yaman@leader.compec.org" target="_top">fatmanur.yaman@leader.compec.org</a> <br>
+                        <a class="mailFont" href="mailto:kaan.aydin@leader.compec.org" target="_top">kaan.aydin@leader.compec.org</a> <br>
                      <!--   <a href="tel:+905559939410" target="_top">+90 530 965 06 06</a>-->  
                     </div>
                 </div>
