--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
             <div class="team-container clearfix text-break">
                 <div class="team-member">
                     <div class="image">
-                        <img src="assets/team/ahmetcelal.jpg" alt="Ahmet Celal Gündoğdu">
+                        <img src="assets/team/ahmetcelall.jpg" alt="Ahmet Celal Gündoğdu">
                     </div>
                     <div class="text">
                         <strong>Ahmet Celal Gündoğdu</strong> <br>
@@ -295,7 +295,7 @@
                 </div>
                 <div class="team-member">
                     <div class="image">
-                        <img src="assets/team/ali.jpg" alt="Ali Sönmez">
+                        <img src="assets/team/alii.jpg" alt="Ali Sönmez">
                     </div>
                     <div class="text">
                         <strong>Ali Sönmez</strong> <br>
@@ -306,7 +306,7 @@
                 </div>
                 <div class="team-member">
                     <div class="image">
-                        <img src="assets/team/kaan.JPG" alt="Kaan Aydın">
+                        <img src="assets/team/kaann.JPG" alt="Kaan Aydın">
                     </div>
                     <div class="text">
                         <strong>Kaan Aydın</strong> <br>
