--- a/index.html
+++ b/index.html
@@ -195,13 +195,10 @@
                 <p>Boğaziçi DataCamp;</p>
                 <ul class="why-list">
                     <li>
-                        Mühendislik, Yönetim Bilişim Sistemleri, Matematik, İstatistik öğrencileri başta olmak üzere Veri Bilimi ve Yapay Zeka alanlarını merak eden tüm üniversite öğrencileri
+                        Mühendislik, Yönetim Bilişim Sistemleri, Matematik ve İstatistik öğrencileri başta olmak üzere Veri Bilimi ve Yapay Zeka alanlarına meraklı tüm üniversite öğrencileri,
                     </li>
                     <li>
-                        Veri Bilimi ve Yapay Zeka hakkında bilgi sahibi olmak isteyen profesyoneller
-                    </li>
-                    <li>
-                        Kısacası Makine Öğrenmesi, Yapay Zeka, Görüntü Tanıma gibi Veri Bilimi ve Yapay Zeka ile ilgili alanlar hakkında bilgi sahibi olmak isteyen herkes!
+                        Veri Bilimi ve Yapay Zeka hakkında bilgi edinmek, kendini geliştirmek isteyen, bu alanlara ilgili profesyoneller
                     </li>
                 </ul>
             </div>
