sss page new design

--- a/sss/index.html
+++ b/sss/index.html
@@ -110,50 +110,124 @@
 
         <section id="faq" style="padding-top:40px; background-image: none;">
             <div class="container container-wide" style="width:100%; " >
-                <!--
-                    AAAAAAAAAAAAAA 
-                -->
+                
                 <div class="accordion" id="accordionExample">
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="headingOne">
                         <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                          Accordion Item #1
+                          Boğaziçi DataCamp kaç gün sürecek ve nerede düzenlenecek?
                         </button>
                       </h2>
                       <div id="collapseOne" class="accordion-collapse collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                          <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                          Toplam 5 gün sürecek olan etkinliğin ilk 4 günü online, son günü hibrit  olarak gerçekleştirilecektir. Yüz yüze katılım bileti alan katılımcılarımız etkinliğin son gününe Garanti Kültür Merkezi’nde katılabileceklerdir. 
                         </div>
                       </div>
                     </div>
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="headingTwo">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                          Accordion Item #2
+                          Boğaziçi DataCamp’e nasıl kayıt olabilirim?
                         </button>
                       </h2>
                       <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                          <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                          Boğaziçi DataCamp’e <a href="https://biletino.com/tr/e-doj/bogazici-datacamp-veri-bilimi-zirvesi/" target="_blank">Biletino</a> vasıtasıyla kayıt olabilirsiniz. 
                         </div>
                       </div>
                     </div>
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="headingThree">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                          Accordion Item #3
+                          Bilet ücretine neler dahil?
                         </button>
                       </h2>
                       <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                          <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                          Bilet ücretine Zirve’ye katılma hakkı, Workshoplara katılma hakkı ve promosyonlara erişim hakkı dahil olmak üzere Boğaziçi DataCamp’in tüm içerikleri dahildir. Sadece 5 Aralık'taki hibrit güne yüz yüze katılım için yüz yüze kategoriden bilet almanız gerekmektedir. 
+                        </div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header" id="headingFour">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
+                          Etkinliğe katılanlara sertifika verilecek mi?
+                        </button>
+                      </h2>
+                      <div id="collapseFour" class="accordion-collapse collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                          Zirveye ve workshoplara katılım
+                            sağlayanlar sertifika almaya hak kazanacaklardır.
+                            Sertifikalar ayrı ayrı olacaktır.
+                            Sertifikalar online bir şekilde teslim edilecektir.
+                        </div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header" id="headingFive">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="true" aria-controls="collapseFive">
+                          Zirveye sadece online olarak katılacaklar sertifika alabilecek mi?
+                        </button>
+                      </h2>
+                      <div id="collapseFive" class="accordion-collapse collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                          Online olarak katılacaklar sertifikayla alakalı herhangi bir sorun yaşamayacaktır. 
+                        </div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header" id="headingSix">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="true" aria-controls="collapseSix">
+                          Online katılımcılar networking imkanı bulabilecekler mi?
+                        </button>
+                      </h2>
+                      <div id="collapseSix" class="accordion-collapse collapse collapse" aria-labelledby="headingSix" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                          Online katılımcılar, Boğaziçi DataCamp’te geçen senelerde de olduğu gibi Discord platformu üzerinden networking yapabileceklerdir.
+                        </div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header" id="headingSeven">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSeven" aria-expanded="true" aria-controls="collapseSeven">
+                          5 Aralık’tan sonra düzenlenecek olan webinarlara nasıl katılabilirim?
+                        </button>
+                      </h2>
+                      <div id="collapseSeven" class="accordion-collapse collapse collapse" aria-labelledby="headingSeven" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                          Boğaziçi DataCamp katılımcıları sene boyunca düzenli olarak düzenlenecek olan webinarlara ücretsiz katılabilirler. Bu süreçteki iletişim mail yoluyla yapılacaktır. 
+                        </div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header" id="headingEight">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEight" aria-expanded="true" aria-controls="collapseEight">
+                          Workshoplara nasıl katılabilirim?
+                        </button>
+                      </h2>
+                      <div id="collapseEight" class="accordion-collapse collapse collapse" aria-labelledby="headingEight" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                          Katılımcılar etkinlikten önce gönderilecek olan kayıt sistemi ile workshoplara kaydolabileceklerdir.
+                        </div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header" id="headingNine">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseNine" aria-expanded="true" aria-controls="collapseNine">
+                          Bilet alınca workshoplara da katılabilir miyim?
+                        </button>
+                      </h2>
+                      <div id="collapseNine" class="accordion-collapse collapse collapse" aria-labelledby="headingNine" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            Workshoplar için kotamız olacaktır, etkinlikten önceki hafta
+                            tüm bilet alanlara workshoplar için başvuru formu
+                            gönderilecektir, bu formdaki bilgilerinize göre uygun
+                            workshoplara katılabileceksiniz.
                         </div>
                       </div>
                     </div>
                   </div>
-                <!--
-                    AAAAAAAAAAAAAA
-                -->
+                
                 <br/>
                 <p class="lead" style = "text-align: center;">
                     <a class="btn btn-primary text-wrap" style="background-color: #0a0462;" onclick="Tawk_API.maximize()" role="button">
