Ana sayfadaki sponsor logoları gizlendi

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 </div>
                 
             </div>
-            <div class="partners-amblems-container">
+            <div class="partners-amblems-container" style="display:none">
                 <div class="partners-amblems">
              
                     <a target="_blank" href="https://www.tazi.ai/">
