--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
                         <p>Boğaziçi Üniversitesi Bilişim Kulübü Compec tarafından düzenlenen ve bu sene dördüncü kez gerçekleşecek olan Boğaziçi DataCamp’e davetlisiniz!</p>
                         <p>Workshopların, zirvenin ve webinarların olduğu etkinlikte Veri Bilimi ve Yapay Zeka’nın çeşitli alanlardaki güncel uygulamalarını tanırken aynı zamanda teknik anlamda da kendinizi geliştirebileceksiniz.
                         </p>
-                        <div class="btn btn-primary" style="padding-top: 18px; margin-top:18px;padding-right: 72px; padding-bottom: 18px; padding-left: 72px; font-size: 24px; font-weight: 500; line-height: 29px; letter-spacing: 0px; text-align: left; border:none;">
-                            <a style="color: white;font-size: 2.4vh; font-family: inherit;" href="https://biletino.com/en/e-ii8/bogazici-datacamp-veri-bilimi-zirvesi/" target="_blank">Kayıt Ol!</a>
+                        <div class="btn btn-primary" style="padding-top: 18px; margin-top:18px;padding-right: 0px; padding-bottom: 18px; padding-left: 0px; font-size: 24px; font-weight: 500; line-height: 29px; letter-spacing: 0px; text-align: left; border:none;">
+                            <a style="padding-top: 22.5px;padding-right: 72px; padding-bottom: 22.5px; padding-left: 72px;color: white;font-size: 2.4vh; font-family: inherit;" href="https://biletino.com/en/e-ii8/bogazici-datacamp-veri-bilimi-zirvesi/" target="_blank">Kayıt Ol!</a>
                         </div>
                         </div>
                         <!--<div style="transform: translateY(10px); text-align: left; font-size: 16 px;font-weight: 400; line-height: 19.2px;"> -->
